# ImageManipulator---OpenCV

./: ImageManipulator - OpenCV.slnx  README.md
ImageManipulator - OpenCV/: CMakeLists.txt  ImageManipulator - OpenCV.cpp  ImageManipulator - OpenCV.vcxproj  ImageManipulator - OpenCV.vcxproj.filters  ImageManipulator.cpp  ImageManipulator.h  main.cpp
